# libpillowfight

./: .gitlab-ci.yml  CMakeLists.txt  scanborder.py
debian/: _version.h.in  changelog  control  copyright  libpillowfight0.symbols  rules  salsa-ci.yml  watch
debian/patches/: 0001-Move-unittests-stack-from-nose-to-pytest.patch  0002-Move-from-nose-to-pytest.patch  series
debian/tests/: control  unittests
debian/upstream/: metadata
tests/: big_scan_borders_test.py  scrap_report_imgs.py  tests_ace.py  tests_scan_borders.py
